--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@ bold_italic_font family='JetBrainsMonoNL Nerd Font' style='Bold Italic'
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-font_size 15
+font_size 13
 
 #: Font size (in pts).
 
@@ -543,7 +543,7 @@ font_size 15
 #: when using the wheel. With a negative number, the minimum number of
 #: lines will always be added.
 
-# touch_scroll_multiplier 1.0
+touch_scroll_multiplier 10
 
 #: Multiplier for the number of lines scrolled by a touchpad. Note
 #: that this is only used for high precision scrolling devices on
