--- a/tmux/.config/tmux/plugins.conf
+++ b/tmux/.config/tmux/plugins.conf
@@ -5,5 +5,6 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 run '~/.tmux/plugins/tpm/tpm'
