--- a/tmux/.config/tmux/set.conf
+++ b/tmux/.config/tmux/set.conf
@@ -4,6 +4,9 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 # set mouse mode to on
 set -g mouse on
 
+# set scroll speed to 1 lines per scroll
+set -g @scroll-speed-num-lines-per-scroll 10
+
 # allow passthrough for kitty graphics protocol
 set -g allow-passthrough on
 
