--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -111,7 +111,7 @@
     "on-click": "~/.config/waybar/scripts/vpn_toggle.sh",
   },
   "network": {
-    "interface": "wlp8s0",
+    "interface": "wlan0",
     "format-wifi": "{icon} {signalStrength}%",
     "format-ethernet": " {ipaddr}",
     "format-disconnected": "󰤭 Disconnected",
