--- a/tmux/.config/tmux/set.conf
+++ b/tmux/.config/tmux/set.conf
@@ -1,5 +1,5 @@
 # fix colors to be 24 bit
-set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -sa terminal-overrides ",*:Sxl"
 
 # set mouse mode to on
 set -g mouse on
@@ -7,7 +7,7 @@ set -g mouse on
 # set scroll speed to 1 lines per scroll
 set -g @scroll-speed-num-lines-per-scroll 10
 
-# allow passthrough for kitty graphics protocol
+# allow passthrough for graphics protocols
 set -g allow-passthrough on
 
 # Start windows and panes at 1, not 0
