allow for git operations in remote-mount

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -21,3 +21,5 @@
 [credential "https://gitlab.com"]
 	helper = 
 	helper = !/usr/bin/glab auth git-credential
+[safe]
+	directory = /home/konji/mhome/remote-mount/
