--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=Adwaita
+gtk-theme-name=Adwaita-dark
 gtk-icon-theme-name=Adwaita
-gtk-font-name=Cantarell 11
+gtk-font-name=Adwaita Sans 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
